Версия с загрузкой и скачиванием файлов

--- a/MvcNormcontrol/MvcNormcontrol.csproj
+++ b/MvcNormcontrol/MvcNormcontrol.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="wwwroot\Documents\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="MvcStudent.db" />
